<resources>
    <string name="app_name">Kalkulator</string>
    <string name="c">C</string>
    <string name="aplikasi_kalkulator">Aplikasi Kalkulator</string>
    <string name="input_angka_pertama">Input Angka Pertama</string>
    <string name="input_angka_kedua">Input Angka Kedua</string>
    <string name="result">Result</string>
    <string name="del">⌫</string>
    <string name="persen">%</string>
    <string name="bagi">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="kali">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="kurang">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="tambah">+</string>
    <string name="_0">0</string>
    <string name="_000">000</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>